--- a/portality/templates/leaps/policy.html
+++ b/portality/templates/leaps/policy.html
@@ -17,8 +17,8 @@
         <p>LEAPS is a successful and unique widening participation programme, funded by its 
         <a href="http://www.leapsonline.org/node/1089">higher education institution and
         local council partners</a> to increase progression to higher education in South East Scotland. We aim to encourage and
-        advise students who are traditionally under-represented in higher education and we currently work with 
-        <a href="http://www.leapsonline.org/node/1137">schools</a>
+        advise students who are traditionally under-represented in higher education and we currently work with
+        <a href="http://www.leapsonline.org/node/1137">state secondary schools</a>
         throughout South East Scotland, supporting pupils who match
         <a href="http://www.leapsonline.org/node/1081">LEAPS eligibility criteria</a>. LEAPS is also
         supported by Skills Development Scotland and delivers the Scottish Funding Council's 
@@ -31,17 +31,41 @@
         but it may be used by LEAPS:</p>
         
         <ul>
-            <li>To administer your involvement in the LEAPS programme (including our events).</li>
+            <li>To administer your involvement in the LEAPS programme (including our events and the LEAPS Transitions Course, if participating).</li>
             <li>To provide you with personalised information, advice and guidance regarding your current, Further and Higher Education.</li>
             <li>To inform you of information, activities and events that may support your interest in and transition to Further and Higher Education.</li>
             <li>To inform UCAS and Further and Higher Education Institutions in the UK and abroad of your engagement in the LEAPS programme.
             This includes your LEAPS eligibility status (if confirmed) being included on your UCAS application, for Higher Education Institutions to see.</li>
-            <li>To update Insight (the Scottish Government senior phase benchmarking tool) in relation to
-            your participation and attainment on the LEAPS Transitions Course (if participating).</li>
+            <li>To liaise with the Higher Education Institutions you have applied to, in order to
+            discuss any issues or queries you may have around applications and offers.</li>
+            <li>To allow Higher Education Institutions to speak to us on your behalf about any
+            issues or queries you may have around applications and offers.</li>
             <li>To undertake research, analysis and reporting to support the ongoing evaluation and development of the LEAPS programme.</li>
         </ul>
 
-        <p>LEAPS uses external companies to process information about you in order to facilitate communications. We use
+        <p>If you are participating in the LEAPS Transitions Course, information about you may also
+        be used by LEAPS:</p>
+
+        <ul>
+            <li>To update the Scottish Government professional benchmarking tool 
+            <a href="https://insight-guides.scotxed.net/about.htm">Insight</a>, used
+            for analysing attainment data in the senior phase (accessible by secondary
+            schools and local authorities). We will provide individual-level data sets to the
+            Education Analytical Services Team at the Scottish Government, who will update
+            Insight. This will include candidate data, qualifications data, attainment data and
+            results contribution data. Insight information will not be made publicly available at
+            a level which allows identification of an individual.</li>
+            <li>To inform your school (where relevant) of your engagement in the LEAPS
+            Transitions Course, including data relating to your participation, completion and
+            attainment. This is so that your school can support you throughout the course.</li>
+            <li>To inform UCAS and Higher Education Institutions in the UK and abroad (where
+            relevant) of your engagement in the LEAPS Transitions Course, including data
+            relating to your participation, completion and attainment. This is so that it can be
+            taken into consideration from an admissions perspective by Higher Education
+            Institutions.</li>
+        </ul>
+
+        <p>LEAPS uses some external companies to process information about you in order to facilitate communications. We use
         <a href="https://dotdigital.com/terms/privacy-policy/">Dotdigital</a>
         and <a href="http://www.textanywhere.net/info-sec-policy.aspx">TextAnywhere</a>
         to do this. You can unsubscribe from Dotdigital emails by clicking on the unsubscribe
@@ -53,6 +77,9 @@
             processing your information, LEAPS can liaise with you directly to administer your involvement in the LEAPS
             programme (including our events) and to support your interest in and transition to Further and Higher
             Education.</li>
+            <li>With specific regard to the LEAPS Transitions Course and the updating of
+            Scottish Government professional benchmarking tool Insight, we are processing
+            information about you because it is in the public interest for us to do so.</li>
         </ul>
 
         <p>Information about you may be shared with:</p>
@@ -66,6 +93,7 @@
             <li>Organisations involved in co-delivering LEAPS events. (These organisations will be outlined when you register
             for LEAPS events, or as soon as possible thereafter).</li>
             <li>Skills Development Scotland.</li>
+            <li>Reference providers (as detailed by you when applying for a role with LEAPS).</li>
         </ul>
 
         <p>We will hold the personal data you provided us for up to 3 years. After this time all identifiable personal data will be
@@ -77,8 +105,11 @@
         Office at <a href="mailto:leaps@ed.ac.uk"></a>leaps@ed.ac.uk</a>.</p>
 
         <p>This privacy statement is continued at: 
-        <br><a href="https://www.ed.ac.uk/records-management/notice">Continued privacy notice</a></p>
+        <br><a href="https://www.ed.ac.uk/data-protection/notice">Continued privacy notice</a></p>
     </div>
 </div>
 
 {% endblock %}
+
+
+
