--- a/portality/templates/leaps/survey/survey.html
+++ b/portality/templates/leaps/survey/survey.html
@@ -854,9 +854,9 @@ p.pregrey > span > span > span > span.select2-selection__rendered {
 
       		<br><br>
           <input type="checkbox" id="claimed_group_school" name="claimed_group_school" style="margin-top:-3px;">
-          Attend a Group 1 or Group 1+ school (Alloa, Armadale, Bannockburn, Castlebrae, Craigroyston,
-          Drummond, Eyemouth, Forrester, Gracemount, Grangemouth, Liberton, Lornshill, Newbattle, Ross, St
-          David's, Tynecastle, WHEC)
+          Attend a Group 1 or Group 1+ school (Alloa, Bannockburn, Castlebrae, Craigroyston,
+          Drummond, Eyemouth, Forrester, Gracemount, Hawick, Liberton, Lornshill, Newbattle, Preston Lodge, Ross, 
+          Tynecastle, Wester Hailes)
 
       		<br><br>
       		<input type="checkbox" name="claimed_first_attending_university" style="margin-top:-3px;">
