--- a/portality/templates/leaps/admin/student.html
+++ b/portality/templates/leaps/admin/student.html
@@ -1101,6 +1101,12 @@ fieldset{
 	        </p>
 	        <table>
 	            <tbody>
+	                <tr>
+	                    <td><input type="text" name="transition_course_taking"{% if record %} value="{{ record.data.transition_course_taking }}"{% endif %}> Transitions course - currently taking</td>
+	                    <td><input type="text" name="transition_course_withdrawn"{% if record %} value="{{ record.data.transition_course_withdrawn }}"{% endif %}> Transitions course - withdrawal</td>
+	                    <td><input type="text" name="transition_course_credits"{% if record %} value="{{ record.data.transition_course_credits }}"{% endif %}> Transitions course - completed with credits</td>
+	                    <td><input type="text" name="transition_course_no_credits"{% if record %} value="{{ record.data.transition_course_no_credits }}"{% endif %}> Transitions course - finished without credits</td>
+	                </tr>
         	        <tr>
         	            {% if record %}<input type="hidden" name="claimed_first_attending_university" value="{{record.data.claimed_first_attending_university}}">{% endif %}
                 		<!-- this was designed as a way to show on the admin screen that a claim had been made, but LEAPS don't want that to show on admin, only on interview, so commented out in case could be added later -->
@@ -1117,7 +1123,7 @@ fieldset{
                 		{% if record %}{% if record.data.hn_only_candidate %} checked="checked"{% endif %}{% endif %}
                 		> HN only candidate</td>
 
-                        <td><input type="checkbox" name="transition_course"
+                        <td style="display:none;"><input type="checkbox" name="transition_course"
             		    {% if record %}{% if record.data.transition_course %} checked="checked"{% endif %}{% endif %}
             		    > Transition course</td>
                     </tr>
