--- a/portality/templates/leaps/survey/complete.html
+++ b/portality/templates/leaps/survey/complete.html
@@ -18,6 +18,18 @@
 
 		        <p>Our staff will review the information you have provided, and may contact you if further details are required.</p>
 
+
+						<p>LEAPS want to explore the effectiveness of the LEAPS Pre-UCAS 1:1 Interview,
+						and we ask for your help to do this! We invite you to complete this short 
+						online questionnaire to help us gather a sense of how LEAPS-eligible pupils feel 
+						about applying to university before their LEAPS Pre-UCAS Interview.</p>
+
+						<p>The questionnaire should take no more than 5 minutes to complete. Completing the
+						questionnaire allows us to make sure LEAPS support is as effective as possible for
+						future LEAPS pupils. You can complete the questionnaire here:</p>
+
+						<p><a href="https://edinburgh.onlinesurveys.ac.uk/pre-leaps-interview-questionnaire">https://edinburgh.onlinesurveys.ac.uk/pre-leaps-interview-questionnaire</a></p>
+
 		        <p>If you are completing this form using a PC in a public place, you should now take the recommended precautions to ensure nobody 
 		        else can access your session and the information you submitted. For example, close the internet browser and log off the PC.</p> 
 
