--- a/portality/templates/leaps/admin/student.html
+++ b/portality/templates/leaps/admin/student.html
@@ -1092,8 +1092,8 @@ fieldset{
                                 {% if record.data.interview.form_date %}
                                     {% if current_user.do_admin %}
                                         <a class="btn btn-info" style="margin-top:-10px;" href="/interviews/{{ record.data.id }}/email">Email action plan</a>
-            `				        {% endif %}
-        `				        {% endif %}
+            				        {% endif %}
+        				        {% endif %}
         				    {% endif %}
         				{% endif %}
     				{% endif %}
