--- a/portality/templates/leaps/admin/student.html
+++ b/portality/templates/leaps/admin/student.html
@@ -1087,9 +1087,9 @@ fieldset{
         				{% endif %}{% endif %}
         				{% if record.data.interview is defined %}
                             {% if record.data.interview.emailed_date %}
-                                Action form emailed on {{ record.data.interview.emailed_date }}
+                                Action plan emailed on {{ record.data.interview.emailed_date }}
                             {% else %}
-                                {% if record.data.interview.form_date %}
+                                {% if record.data.interview.completed_date %}
                                     {% if current_user.do_admin %}
                                         <a class="btn btn-info" style="margin-top:-10px;" href="/interviews/{{ record.data.id }}/email">Email action plan</a>
             				        {% endif %}
