--- a/portality/templates/leaps/survey/complete.html
+++ b/portality/templates/leaps/survey/complete.html
@@ -19,6 +19,8 @@
 		        <p>Our staff will review the information you have provided, and may contact you if further details are required.</p>
 
 
+						<p><b>Your help please - complete below survey on how you feel about applying to uni / college (and enter prize draw for £10 Amazon voucher!)</b></p>
+
 						<p>LEAPS want to explore the effectiveness of the LEAPS Pre-UCAS 1:1 Interview,
 						and we ask for your help to do this! We invite you to complete this short 
 						online questionnaire to help us gather a sense of how LEAPS-eligible pupils feel 
