--- a/portality/templates/leaps/admin/students.html
+++ b/portality/templates/leaps/admin/students.html
@@ -22,7 +22,7 @@
             <a id="archives" class="btn btn-primary" href="/admin/archive">Archive records</a>
             <select id="archive" style="display: none;">
                 <option></option>
-            {% for name in selections.archives %}
+            {% for name in archives %}
                 <option>{{ name }}</option>
             {% endfor %}
             </select>
