archive by query

--- a/portality/templates/leaps/interviews/form.html
+++ b/portality/templates/leaps/interviews/form.html
@@ -348,11 +348,11 @@ td > p {
                     {% else %}
                     <tr>
                         <td>
-                            <p>Click 'Save' to allow you (the interviewer) to save the changes you have made so far and to allow you
+                            <p style="text-align:left;">Click 'Save' to allow you (the interviewer) to save the changes you have made so far and to allow you
                             to come back to complete the form later.</p>
                         </td>
                         <td>
-                            <p>Click 'Save and complete' only when you (the interviewer) are satisfied the form is complete.
+                            <p style="text-align:left;">Click 'Save and complete' only when you (the interviewer) are satisfied the form is complete.
                             You won't be able to make any further changes after pressing this button.</p>
                         </td>
                     </tr>
