--- a/portality/templates/leaps/interviews/form.html
+++ b/portality/templates/leaps/interviews/form.html
@@ -348,12 +348,12 @@ td > p {
                     {% else %}
                     <tr>
                         <td>
-                            <p style="text-align:left;">Click 'Save' to allow you (the interviewer) to save the changes you have made so far and to allow you
-                            to come back to complete the form later.</p>
+                            <p style="text-align:left;color:red;"><b>Click 'Save' to allow you (the interviewer) to save the changes you have made so far and to allow you
+                            to come back to complete the form later.</b></p>
                         </td>
                         <td>
-                            <p style="text-align:left;">Click 'Save and complete' only when you (the interviewer) are satisfied the form is complete.
-                            You won't be able to make any further changes after pressing this button.</p>
+                            <p style="text-align:left;color:red;"><b>Click 'Save and complete' only when you (the interviewer) are satisfied the form is complete.
+                            You won't be able to make any further changes after pressing this button.</b></p>
                         </td>
                     </tr>
                     <tr>
