--- a/portality/templates/leaps/universities/pae.html
+++ b/portality/templates/leaps/universities/pae.html
@@ -159,7 +159,7 @@ jQuery(document).ready(function() {
                 This student is taking the LEAPS Transitions Course, credit-rated for 20 credits (SCQF Level 7), 
                 focusing on developing key academic skills and practical learning strategies required for a 
                 positive transition into higher education. For more information please visit 
-                www.leapsonline.org/transitions-admissions
+                <a href="https://www.leapsonline.org/transitions-admissions">www.leapsonline.org/transitions-admissions</a>
             {% endif %}
             {% if student.additional_comments != "" %}
                 <strong>LEAPS staff comments:</strong> {{ student.additional_comments|safe }}
